bitsandbytes/bnb/tests/ui/bin_reserved_field_name.rs
//! A field named `r`/`w` collides with the codec's generated source/sink.
use bnb::bin;

#[bin(big)]
struct Frame {
    w: u8,
    h: u8,
}

fn main() {}
